Conversation caption generation analysis

--- a/src/analysis/role_inference.ipynb
+++ b/src/analysis/role_inference.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,11 +69,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input = \"Amsterdam walking tour\""
+    "input = \"Enchanted forest\""
    ]
   },
   {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
       "\n",
       "\"setting\": \"A conversation with a friend.\", \"roles\": [\"me\", \"friend\"], \"GPT_role\": \"friend\", \"user_role\": \"me\"\n",
       "\n",
-      "\"setting\": \"Amsterdam walking tour\"\n"
+      "\"setting\": \"Enchanted forest\"\n"
      ]
     }
    ],
@@ -132,16 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\"roles\": [\"tour guide\", \"tourist\"], \"GPT_role\": \"tour guide\", \"user_role\": \"tourist\"'"
+       "'\"roles\": [\"fairy\", \"adventurer\"], \"GPT_role\": \"fairy\", \"user_role\": \"adventurer\"'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,19 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'roles': ['tour guide', 'tourist'],\n",
-       " 'GPT_role': 'tour guide',\n",
-       " 'user_role': 'tourist',\n",
-       " 'setting': 'Amsterdam walking tour'}"
+       "{'roles': ['fairy', 'adventurer'],\n",
+       " 'GPT_role': 'fairy',\n",
+       " 'user_role': 'adventurer',\n",
+       " 'setting': 'Enchanted forest'}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,13 +178,6 @@
     "\n",
     "res_dict"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
