SingleRunThread fix, templates refinement

--- a/src/analysis/user_input_validation.ipynb
+++ b/src/analysis/user_input_validation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,13 +51,16 @@
     "from completion_thread import CompletionThread\n",
     "from prompt_builder import PromptBuilder\n",
     "from utils import load_template\n",
+    "from keys import OPENAI_API_KEY\n",
     "\n",
-    "import openai\n"
+    "import openai\n",
+    "\n",
+    "openai.api_key = OPENAI_API_KEY\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Does the following describe a situation, place or activity? Respond only with 1 or 0.  {}\n",
+      "Is the following a description of a place, situation or activity involving people? \"{}\"  Respond only with 1 if it clearly does, otherwise 0.\n",
       "1\n"
      ]
     }
@@ -85,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,20 +110,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Does the following describe a situation, place or activity? Respond only with 1 or 0.  What is this?',\n",
-       " 'Does the following describe a situation, place or activity? Respond only with 1 or 0.  Kayaking',\n",
-       " 'Does the following describe a situation, place or activity? Respond only with 1 or 0.  Swimming',\n",
-       " 'Does the following describe a situation, place or activity? Respond only with 1 or 0.  I would like to go as well',\n",
-       " 'Does the following describe a situation, place or activity? Respond only with 1 or 0.  In Python, each Python file actually has a specific term called “Module”']"
+       "['Is the following a description of a place, situation or activity involving people? \"What is this?\"  Respond only with 1 if it clearly does, otherwise 0.',\n",
+       " 'Is the following a description of a place, situation or activity involving people? \"Kayaking\"  Respond only with 1 if it clearly does, otherwise 0.',\n",
+       " 'Is the following a description of a place, situation or activity involving people? \"Swimming\"  Respond only with 1 if it clearly does, otherwise 0.',\n",
+       " 'Is the following a description of a place, situation or activity involving people? \"I would like to go as well\"  Respond only with 1 if it clearly does, otherwise 0.',\n",
+       " 'Is the following a description of a place, situation or activity involving people? \"In Python, each Python file actually has a specific term called “Module”\"  Respond only with 1 if it clearly does, otherwise 0.']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +177,7 @@
        "['0', '1', '1', '0', '0']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,13 +185,6 @@
    "source": [
     "results"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
