--- a/src/analysis/role_inference.ipynb
+++ b/src/analysis/role_inference.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -33,12 +33,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "from thread import Thread\n",
-    "from completion_thread import CompletionThread\n",
+    "from single_run_thread import SingleRunThread\n",
     "from prompt_builder import PromptBuilder\n",
     "from utils import load_template\n",
     "import keys\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -132,22 +132,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\"roles\": [\"fairy\", \"adventurer\"], \"GPT_role\": \"fairy\", \"user_role\": \"adventurer\"'"
+       "'\"roles\": [\"explorer\", \"forest spirit\"], \"GPT_role\": \"explorer\", \"user_role\": \"forest spirit\"'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t = CompletionThread()\n",
+    "t = SingleRunThread()\n",
     "\n",
     "result = t.send(prompt)\n",
     "result"
@@ -155,19 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'roles': ['fairy', 'adventurer'],\n",
-       " 'GPT_role': 'fairy',\n",
-       " 'user_role': 'adventurer',\n",
+       "{'roles': ['explorer', 'forest spirit'],\n",
+       " 'GPT_role': 'explorer',\n",
+       " 'user_role': 'forest spirit',\n",
        " 'setting': 'Enchanted forest'}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
