Multiple input validation prompts tested.

--- a/src/analysis/user_input_validation.ipynb
+++ b/src/analysis/user_input_validation.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1327,15 +1327,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Forest :1\n"
+      "Forest :0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Is the following a description of a place, situation or activity involving people? \"Forest\"  Respond only with 1 if it clearly does, otherwise 0.\\nExamples: \"I need to buy some groceries.\" 0 \"In a park\" 1 \"Sahara Desert\" 1'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1375,6 +1385,476 @@
     "\n",
     "few_shot_result = t.send(prompt)\n",
     "print(description + ' :' + few_shot_result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring alternative prompt templates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_template_alternatives = {\n",
+    "    'few_shot': \"Is the following a description of a place, situation or activity involving people? \\\"{}\\\"  Respond only with 1 if it clearly does, otherwise 0. Examples: \\\"I need to buy some groceries.\\\" 0 \\\"In a park\\\" 1 \\\"Sahara Desert\\\" 1\",\n",
+    "    'few_shot_extended': \"Is the following a description of a place, situation or activity involving people? \\\"{}\\\"  Respond only with 1 if it clearly does, otherwise 0. Examples: \\\"What do you think about this?\\\" 0 \\\"I have no intention to join them on this trip\\\" 0 \\\"In apartment.\\\" 1 \\\"On a highway, travelling home.\\\" 0 \\\"Shopping for gifts\\\" 1 \\\"Blew87enj bli blu blu\\\" 0 \\\"Ordering coffe\\\" 1\",\n",
+    "    'rephrasing_no_people': \"Is the following a description of a place, situation or activity? \\\"{}\\\"  Respond only with 1 if it clearly does, otherwise 0. \",\n",
+    "    'rephrasing_with_discussion': \"Is the following a description of a place, situation or activity where two characters or people can have a discussion? \\\"{}\\\"  Respond only with 1 if it clearly does, otherwise 0. \"\n",
+    ",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "builder = PromptBuilder()\n",
+    "t = SingleRunThread()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "      <th>label</th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>predicted_label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Amazon Rainforest</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Is the following a description of a place, sit...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The ants were busy gathering food.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Is the following a description of a place, sit...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The aroma of coffee fills the cozy cafe</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Is the following a description of a place, sit...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The distant thunder announces an approaching s...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Is the following a description of a place, sit...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The meeting will start at 3 PM.</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Is the following a description of a place, sit...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         description  label  \\\n",
+       "0                                  Amazon Rainforest      1   \n",
+       "1                 The ants were busy gathering food.      0   \n",
+       "2            The aroma of coffee fills the cozy cafe      0   \n",
+       "3  The distant thunder announces an approaching s...      0   \n",
+       "4                    The meeting will start at 3 PM.      0   \n",
+       "\n",
+       "                                              prompt  predicted_label  \n",
+       "0  Is the following a description of a place, sit...                1  \n",
+       "1  Is the following a description of a place, sit...                1  \n",
+       "2  Is the following a description of a place, sit...                1  \n",
+       "3  Is the following a description of a place, sit...                0  \n",
+       "4  Is the following a description of a place, sit...                1  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('../data/input_validation_predictions.csv', sep=';')\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### few_shot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      Is the following a description of a place, sit...\n",
+       "1      Is the following a description of a place, sit...\n",
+       "2      Is the following a description of a place, sit...\n",
+       "3      Is the following a description of a place, sit...\n",
+       "4      Is the following a description of a place, sit...\n",
+       "                             ...                        \n",
+       "164    Is the following a description of a place, sit...\n",
+       "165    Is the following a description of a place, sit...\n",
+       "166    Is the following a description of a place, sit...\n",
+       "167    Is the following a description of a place, sit...\n",
+       "168    Is the following a description of a place, sit...\n",
+       "Name: description, Length: 169, dtype: object"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "few_shot_prompts = data['description'].apply(lambda x : multiprompt(prompt_template_alternatives['few_shot'], (x,), builder))\n",
+    "few_shot_prompts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "few_shot_labels =[]\n",
+    "for x in few_shot_prompts:\n",
+    "    few_shot_labels.append(t.send(x)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['few_shot_label'] = [int(x) for x in few_shot_labels]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.863905325443787"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(data['label'], data['few_shot_label'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### rephrasing_no_people"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      Is the following a description of a place, sit...\n",
+       "1      Is the following a description of a place, sit...\n",
+       "2      Is the following a description of a place, sit...\n",
+       "3      Is the following a description of a place, sit...\n",
+       "4      Is the following a description of a place, sit...\n",
+       "                             ...                        \n",
+       "164    Is the following a description of a place, sit...\n",
+       "165    Is the following a description of a place, sit...\n",
+       "166    Is the following a description of a place, sit...\n",
+       "167    Is the following a description of a place, sit...\n",
+       "168    Is the following a description of a place, sit...\n",
+       "Name: description, Length: 169, dtype: object"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rephrasing_no_people_prompts = data['description'].apply(lambda x : multiprompt(prompt_template_alternatives['rephrasing_no_people'], (x,), builder))\n",
+    "rephrasing_no_people_prompts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rephrasing_no_people_labels =[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x in rephrasing_no_people_prompts:\n",
+    "    rephrasing_no_people_labels.append(t.send(x)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['rephrasing_no_people_label'] = [int(x) for x in rephrasing_no_people_labels]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6094674556213018"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(data['label'], data['rephrasing_no_people_label'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### rephrasing_with_discussion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      Is the following a description of a place, sit...\n",
+       "1      Is the following a description of a place, sit...\n",
+       "2      Is the following a description of a place, sit...\n",
+       "3      Is the following a description of a place, sit...\n",
+       "4      Is the following a description of a place, sit...\n",
+       "                             ...                        \n",
+       "164    Is the following a description of a place, sit...\n",
+       "165    Is the following a description of a place, sit...\n",
+       "166    Is the following a description of a place, sit...\n",
+       "167    Is the following a description of a place, sit...\n",
+       "168    Is the following a description of a place, sit...\n",
+       "Name: description, Length: 169, dtype: object"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rephrasing_with_discussion_prompts = data['description'].apply(lambda x : multiprompt(prompt_template_alternatives['rephrasing_with_discussion'], (x,), builder))\n",
+    "rephrasing_with_discussion_prompts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rephrasing_with_discussion_labels =[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x in rephrasing_with_discussion_prompts:\n",
+    "    rephrasing_with_discussion_labels.append(t.send(x)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['rephrasing_with_discussion_label'] = [int(x) for x in rephrasing_with_discussion_labels]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5502958579881657"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(data['label'], data['rephrasing_with_discussion_label'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### few_shot_extended"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      Is the following a description of a place, sit...\n",
+       "1      Is the following a description of a place, sit...\n",
+       "2      Is the following a description of a place, sit...\n",
+       "3      Is the following a description of a place, sit...\n",
+       "4      Is the following a description of a place, sit...\n",
+       "                             ...                        \n",
+       "164    Is the following a description of a place, sit...\n",
+       "165    Is the following a description of a place, sit...\n",
+       "166    Is the following a description of a place, sit...\n",
+       "167    Is the following a description of a place, sit...\n",
+       "168    Is the following a description of a place, sit...\n",
+       "Name: description, Length: 169, dtype: object"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "few_shot_extended_prompts = data['description'].apply(lambda x : multiprompt(prompt_template_alternatives['few_shot_extended'], (x,), builder))\n",
+    "few_shot_extended_prompts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "few_shot_extended_labels = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for x in few_shot_extended_prompts:\n",
+    "    few_shot_extended_labels.append(t.send(x)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['few_shot_extended_label'] = [int(x) for x in few_shot_extended_labels]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7869822485207101"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(data['label'], data['few_shot_extended_label'])"
    ]
   }
  ],
