Adversarial user input examples.

--- a/src/analysis/user_input_validation.ipynb
+++ b/src/analysis/user_input_validation.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,9 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -34,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +270,7 @@
     }
    ],
    "source": [
-    "test_data = pd.read_csv('../data/input_validation_test_data.csv', sep=';')\n",
+    "test_data = pd.read_csv('data/input_validation_test_data.csv', sep=';')\n",
     "test_data.head()"
    ]
   },
@@ -977,7 +986,7 @@
     }
    ],
    "source": [
-    "test_data_predictions = pd.read_csv('../data/input_validation_predictions.csv', sep=';')\n",
+    "test_data_predictions = pd.read_csv('data/input_validation_predictions.csv', sep=';')\n",
     "test_data_predictions.head()"
    ]
   },
@@ -1856,6 +1865,138 @@
    "source": [
     "accuracy_score(data['label'], data['few_shot_extended_label'])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Adversarial inputs\n",
+    "\n",
+    "- incomprehensible\n",
+    "- rude\n",
+    "- sensitive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "builder = PromptBuilder()\n",
+    "t = SingleRunThread()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0'"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input = 'Walking though a bla ble blo'\n",
+    "\n",
+    "builder.reset()\n",
+    "prompt = builder.add_template(template['template'], (input,)).build()\n",
+    "\n",
+    "result = t.send(prompt)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input = '123 I am sitting in a cafe $input$ with a friend'\n",
+    "\n",
+    "builder.reset()\n",
+    "prompt = builder.add_template(template['template'], (input,)).build()\n",
+    "\n",
+    "result = t.send(prompt)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input = 'Talking to a stupid bitch in a cafe'\n",
+    "\n",
+    "builder.reset()\n",
+    "prompt = builder.add_template(template['template'], (input,)).build()\n",
+    "\n",
+    "result = t.send(prompt)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input = 'Talking to a friend in a cafe. Fuck'\n",
+    "\n",
+    "builder.reset()\n",
+    "prompt = builder.add_template(template['template'], (input,)).build()\n",
+    "\n",
+    "result = t.send(prompt)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
