--- a/src/analysis/role_inference.ipynb
+++ b/src/analysis/role_inference.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"/home/mihaelabaksic/proj/2023-languagelearning\")\n",
@@ -33,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,14 +89,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on a provided setting description, infere two roles involved in the conversation in the provided setting. Assign a more moderatory role to GPT and the other to user. Fully adhere to the output format roles\": [\"ROLE1\", \"ROLE2\"],\"GPT_role\": \"ROLE\",\"user_role\": \"ROLE\" \n",
+      "Based on a provided setting description, infere two roles involved in the conversation in the provided setting. Assign a more moderatory role to GPT and the other to user. Fully adhere to the output format \"roles\": [\"ROLE1\", \"ROLE2\"],\"GPT_role\": \"ROLE\",\"user_role\": \"ROLE\" \n",
       "Examples:\n",
       "\n",
       "\n",
@@ -132,16 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\"roles\": [\"explorer\", \"forest spirit\"], \"GPT_role\": \"explorer\", \"user_role\": \"forest spirit\"'"
+       "'\"roles\": [\"explorer\", \"forest spirit\"],\"GPT_role\": \"forest spirit\",\"user_role\": \"explorer\"'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,19 +146,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'roles': ['explorer', 'forest spirit'],\n",
-       " 'GPT_role': 'explorer',\n",
-       " 'user_role': 'forest spirit',\n",
+       " 'GPT_role': 'forest spirit',\n",
+       " 'user_role': 'explorer',\n",
        " 'setting': 'Enchanted forest'}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,6 +168,180 @@
     "res_dict['setting'] = input\n",
     "\n",
     "res_dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### No explicit role given"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"roles\": [\"librarian\", \"student\"],\"GPT_role\": \"librarian\",\"user_role\": \"student\"'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setting_description = 'In the library'\n",
+    "\n",
+    "builder = PromptBuilder()\n",
+    "builder.add_template(description['template'], ()).add_template(examples['template'], ()).add_template(examples['choices'][0], ()).add_template(examples['choices'][2], ())\n",
+    "builder.add_template(query['template'], (setting_description,))\n",
+    "\n",
+    "prompt = builder.build()\n",
+    "\n",
+    "\n",
+    "t = SingleRunThread()\n",
+    "result = t.send(prompt)\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Explicit role given"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"roles\": [\"interviewer\", \"Mathew McConaughey\"],\"GPT_role\": \"interviewer\", \"user_role\": \"Mathew McConaughey\"'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setting_description = 'Discussing his performance in Interstellar with Mathew McConaughey'\n",
+    "\n",
+    "builder = PromptBuilder()\n",
+    "builder.add_template(description['template'], ()).add_template(examples['template'], ()).add_template(examples['choices'][0], ()).add_template(examples['choices'][2], ())\n",
+    "builder.add_template(query['template'], (setting_description,))\n",
+    "\n",
+    "prompt = builder.build()\n",
+    "\n",
+    "\n",
+    "t = SingleRunThread()\n",
+    "result = t.send(prompt)\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"roles\": [\"conference attendee\", \"Yann LeCun\"],\"GPT_role\": \"Yann LeCun\", \"user_role\": \"conference attendee\"'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setting_description = 'Talking to Yann LeCun on a conference afterparty'\n",
+    "\n",
+    "builder = PromptBuilder()\n",
+    "builder.add_template(description['template'], ()).add_template(examples['template'], ()).add_template(examples['choices'][0], ()).add_template(examples['choices'][4], ())\n",
+    "builder.add_template(query['template'], (setting_description,))\n",
+    "\n",
+    "prompt = builder.build()\n",
+    "\n",
+    "\n",
+    "t = SingleRunThread()\n",
+    "result = t.send(prompt)\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"roles\": [\"interviewer\", \"young researcher\"],\"GPT_role\": \"interviewer\", \"user_role\": \"young researcher\"'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setting_description = 'Intervewer talking to a young researcher'\n",
+    "\n",
+    "builder = PromptBuilder()\n",
+    "builder.add_template(description['template'], ()).add_template(examples['template'], ()).add_template(examples['choices'][0], ()).add_template(examples['choices'][4], ())\n",
+    "builder.add_template(query['template'], (setting_description,))\n",
+    "\n",
+    "prompt = builder.build()\n",
+    "\n",
+    "\n",
+    "t = SingleRunThread()\n",
+    "result = t.send(prompt)\n",
+    "\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\"roles\": [\"young researcher\", \"interviewer\"],\"GPT_role\": \"interviewer\",\"user_role\": \"young researcher\"'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setting_description = 'Young researchr talking to a interviewer'\n",
+    "\n",
+    "builder = PromptBuilder()\n",
+    "builder.add_template(description['template'], ()).add_template(examples['template'], ()).add_template(examples['choices'][0], ()).add_template(examples['choices'][4], ())\n",
+    "builder.add_template(query['template'], (setting_description,))\n",
+    "\n",
+    "prompt = builder.build()\n",
+    "\n",
+    "\n",
+    "t = SingleRunThread()\n",
+    "result = t.send(prompt)\n",
+    "\n",
+    "result"
    ]
   },
   {
