Language level analysis and conclusion

--- a/src/analysis/language_proficiency_level.ipynb
+++ b/src/analysis/language_proficiency_level.ipynb
@@ -487,7 +487,135 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Experimenting with higher temperatures for text simplification purposes"
+    "### Simplification - no description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C1: Football, also referred to as soccer in certain nations, is an immensely renowned sport worldwide, distinguished by its lively gameplay and devoted following of fans, as evidenced by its matches attracting millions of viewers from across the globe.\n",
+      "B2: Football, also called soccer in certain nations, is an immensely popular sport worldwide, recognized for its fast-paced gameplay and devoted fan community, attracting millions of viewers across the globe during matches.\n",
+      "B1: Football, also known as soccer in certain nations, is a well-liked sport worldwide. It is recognized for its energetic gameplay and devoted fan following, attracting millions of spectators globally.\n",
+      "A2: Football, also called soccer in some places, is a very popular sport worldwide. It is known for its exciting gameplay and enthusiastic fans, and matches attract millions of viewers from all over the world.\n",
+      "A1: Football, also called soccer in some places, is a very popular sport all over the world. It is known for its exciting gameplay and fans who love it a lot. Matches attract millions of people from different countries to watch.\n"
+     ]
+    }
+   ],
+   "source": [
+    "c2_sentence = 'Football, known as soccer in some countries, is a globally popular sport characterized by its dynamic gameplay and passionate fanbase, with matches drawing millions of viewers from around the world.'\n",
+    "\n",
+    "levels = ['C1', 'B2', 'B1', 'A2', 'A1']\n",
+    "\n",
+    "for l in levels:\n",
+    "    res = t.send(refinement_template.format(l, c2_sentence ))\n",
+    "    print(l + ': ' + res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simplification - with description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C1: Football, also known as soccer in certain regions, is an immensely popular sport on a global scale. It is renowned for its fast-paced gameplay and devoted fan following, with matches attracting millions of spectators from various corners of the globe.\n",
+      "B2: Football, also known as soccer in certain nations, is an immensely popular sport worldwide. It is distinguished by its fast-paced nature and enthusiastic supporters, attracting millions of spectators from across the globe.\n",
+      "B1: Football, also known as soccer in certain nations, is a sport that is widely enjoyed across the globe. It is recognized for its energetic style of play and devoted fan community, with matches attracting millions of spectators from various countries.\n",
+      "A2: Football, also known as soccer in some places, is a very popular sport worldwide. It is known for its exciting gameplay and dedicated fans. Matches attract millions of viewers from different parts of the world.\n",
+      "A1: Football, also called soccer in some places, is a very popular sport worldwide. It is known for its fast-paced action and has many enthusiastic fans. Matches attract millions of people from different countries who watch them on TV.\n"
+     ]
+    }
+   ],
+   "source": [
+    "c2_sentence = 'Football, known as soccer in some countries, is a globally popular sport characterized by its dynamic gameplay and passionate fanbase, with matches drawing millions of viewers from around the world.'\n",
+    "\n",
+    "levels = ['C1', 'B2', 'B1', 'A2', 'A1']\n",
+    "\n",
+    "for l in levels:\n",
+    "    res = t.send(refinement_template_with_description.format(l, cefr_decriptions[l], c2_sentence))\n",
+    "    print(l + ': ' + res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simplification - closer starting level"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### No level description"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A2: Football is a sport that many people enjoy, where two teams with eleven players each try to kick a ball into the other team's net to score goals.\n",
+      "A1: Football is a fun game that two teams play. Each team has eleven players and they try to score goals by kicking a ball into the other team's net.\n"
+     ]
+    }
+   ],
+   "source": [
+    "b1_sentence = 'Football is a popular sport played by two teams, each consisting of eleven players, who aim to score goals by kicking a ball into the opposing team\\'s net.'\n",
+    "levels = ['A2', 'A1']\n",
+    "\n",
+    "for l in levels:\n",
+    "    res = t.send(refinement_template.format(l, b1_sentence))\n",
+    "    print(l + ': ' + res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Level description available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A2: Football is a well-liked game that is played by two teams. Each team has eleven players and the objective is to score goals by kicking a ball into the other team's net.\n",
+      "A1: Football is a well-liked sport played by two teams. Each team has eleven players. The goal of the game is to score goals by kicking a ball into the other team's net.\n"
+     ]
+    }
+   ],
+   "source": [
+    "b1_sentence = 'Football is a popular sport played by two teams, each consisting of eleven players, who aim to score goals by kicking a ball into the opposing team\\'s net.'\n",
+    "levels = ['A2', 'A1']\n",
+    "\n",
+    "for l in levels:\n",
+    "    res = t.send(refinement_template_with_description.format(l, cefr_decriptions[l], b1_sentence))\n",
+    "    print(l + ': ' + res)"
    ]
   },
   {
@@ -505,7 +633,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Generation on a certain CERF level works well. If the level description is included, A1 and A2 levels show best improvement\n",
+    "2. Refininf to a higher CERF level works well.\n",
+    "3. Refininf to a lower CERF level works well for all levels except for A1 and A2, both ending up too complicated, if we start from C1\n",
+    "4. Including a level description does not help simplifying to A1 and A2 levels from C1.\n",
+    "5. If we start from B1, both A1 and A2 simplification is satisfactory.\n",
+    "6. Including a level description worsens simplification results for B1->A2 and B1->A1\n"
+   ]
   }
  ],
  "metadata": {
