--- a/src/analysis/refinement_bots/language_proficiency_level.ipynb
+++ b/src/analysis/refinement_bots/language_proficiency_level.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Language proficiency level"
+    "# Language proficiency level bot"
    ]
   },
   {
