Role follower analysis conclusion

--- a/src/analysis/refinement_bots/role_follower.ipynb
+++ b/src/analysis/refinement_bots/role_follower.ipynb
@@ -59,16 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"This sentence was written by GPT acting as a police officer. Rephrase it to sound more like a police officer while keeping the semantics. Hey, just stay cool and stay in your cars until they figure out what's going on.\""
+       "'Remain calm and remain inside your vehicles until they ascertain the situation.'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,28 +80,46 @@
     "prompt = builder.add_template(rephrasing_template, (role, sentence)).build()\n",
     "builder.reset()\n",
     "\n",
-    "prompt "
+    "rephrasing = t.send(prompt)\n",
+    "rephrasing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Remain calm and remain inside your vehicles until the situation is thoroughly assessed.'"
+       "'Please remain calm and stay inside your vehicles until the situation has been thoroughly assessed.'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "role = 'police officer'\n",
+    "sentence = 'Remain calm and remain inside your vehicles until the situation is thoroughly assessed.'\n",
+    "\n",
+    "\n",
+    "prompt = builder.add_template(rephrasing_template, (role, sentence)).build()\n",
+    "builder.reset()\n",
+    " \n",
     "rephrasing = t.send(prompt)\n",
     "rephrasing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusions\n",
+    "\n",
+    "1. When asked to rephrase a sentence to sound more like xy, it performs as expected\n",
+    "2. When asked to rephrase a sentence to sound more like xy and the sentence is already in the character, it performs minimal changes."
    ]
   }
  ],
