Bots for input validation and role inference

--- a/src/analysis/refinement_bots/role_follower.ipynb
+++ b/src/analysis/refinement_bots/role_follower.ipynb
@@ -119,7 +119,7 @@
     "### Conclusions\n",
     "\n",
     "1. When asked to rephrase a sentence to sound more like xy, it performs as expected\n",
-    "2. When asked to rephrase a sentence to sound more like xy and the sentence is already in the character, it performs minimal changes."
+    "2. When asked to rephrase a sentence to sound more like xy and the sentence is already in the character, it performs minimal changes./"
    ]
   }
  ],
