--- a/src/analysis/chat_ bot.ipynb
+++ b/src/analysis/chat_ bot.ipynb
@@ -9,13 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.append(\"/home/mihaelabaksic/proj/2023-languagelearning\")\n",
     "sys.path.append(\"/home/mihaelabaksic/proj/2023-languagelearning/src\") \n",
+    "sys.path.append(\"/home/mihaelabaksic/proj/2023-languagelearning/src/bots\") \n",
     "sys.path.append(\"/home/mihaelabaksic/proj/2023-languagelearning/src/templates\") \n",
     "\n",
     "%load_ext autoreload\n",
@@ -24,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,13 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "builder = PromptBuilder()\n",
-    "t = Thread()\n"
+    "t = Thread()"
    ]
   },
   {
@@ -64,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "template = '{0}. The user is a {2}. Act as if you were {3}. Initiate a conversation as {3} in {1}. Generate one conversation line. You can only speak {1} on level {4}. {4} is defined as {5}. Start the response with: {3}: ...'\n",
+    "template = \"{0}. The user is a {2}. Act as if you were {3}. Initiate a conversation as {3} in {1}. Generate one conversation line. You can only speak {1} on level {4}. {4} is defined as {5}. Start the response with: {3}: ...\"\n",
     "# args: setting, language, user_role, GPT_role, language_level, level_description\n",
     "\n",
     "language = 'English'\n",
@@ -74,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,11 +170,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ChatBot class"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from bots.chat_bot import ChatBot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bot = ChatBot(examples[0]['setting'], examples[0]['GPT_role'], examples[0]['user_role'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Message(role='assistant', content='waiter: Good morning! How can I assist you today?')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bot.send()"
+   ]
   }
  ],
  "metadata": {
